Fix modal image container stretching.

--- a/src/app/shared/components/image-modal/image-modal.component.scss
+++ b/src/app/shared/components/image-modal/image-modal.component.scss
@@ -19,12 +19,12 @@ img {
   max-width: 100%;
   max-height: 100%;
   min-height: 0;
+  cursor: url("/assets/images/cursor/magnify.png"), auto;
 }
 
 .slideshow-container {
   position: relative;
   min-height: 0;
-  cursor: url("/assets/images/cursor/magnify.png"), auto;
 }
 
 .img-magnifier-glass {
@@ -51,5 +51,4 @@ img {
 
 .buttons {
   margin-top: 1rem;
-  width: 100%;
 }
