--- a/src/assets/css/core/_modal.scss
+++ b/src/assets/css/core/_modal.scss
@@ -5,9 +5,6 @@
 .dn-modal {
   max-width: 90vw;
   max-height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   min-height: 0;
   animation: fadein 0.5s;
 }
